[tool.poetry]
name = "used-in-code"
version = "0.1.0"
description = ""
authors = ["apiiro-adamo <adam.o@apiiro.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = "^1.26.0"
gunicorn = "20.1.0"
atlassian-python-api = "3.41.3"
sqlparse = "0.2.4"
GitPython = "3.1.18"
Flask = "1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
